test/should-fail/缺少换行-3.j
function f takes nothing returns nothing
    if true then
    endif if true then
    endif
endfunction
